--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+	<div class="nav">
+		<img src="photo.png">
+	<h1>Ashutosh Kushwah</h1>
+		<a href="https://www.linkedin.com/feed/">
+			<label> Activities</label>
+	</div>
+	<section class="section">
+		<h3 id="skill"> Skill</h3>
+		<h3 id="Project"> Project</h3></section>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
