--- a/main.html
+++ b/main.html
@@ -16,7 +16,11 @@
 	<section class="section">
 		<h3 id="skill"> Skill</h3>
 		<h3 id="Project"> Project</h3></section>
-	
+	    <project> <ul>
+			<li>project1</li>
+		<li>project2</li>
+			<li> project3</li>
+		</ul></project>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
